--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,38 +5,47 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="@drawable/dog_background"
+    android:background="@drawable/bones"
     >
 
 
 
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:inputType="textEmailAddress"
         android:hint="User Name"
+        android:textColorHint="@color/regular_white"
         android:ems="10"
         android:id="@+id/user_editTxt"
-        android:layout_marginBottom="20dp"
+        android:alpha="50"
+        android:drawableLeft="@drawable/pass_icon"
+        android:editable="false"
+        android:elevation="10dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/regular_white"
         android:layout_above="@+id/password_editTxt"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/password_editTxt"
         android:layout_alignEnd="@+id/password_editTxt" />
 
     <EditText
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:inputType="textPassword"
         android:ems="10"
         android:hint="Password"
+        android:textColorHint="@color/regular_white"
+        android:drawableLeft="@drawable/user_icon"
         android:id="@+id/password_editTxt"
         android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/colorPrimaryDark"/>
+        android:textColor="@color/regular_white"
+        android:alpha="50"
+        android:elevation="10dp"
+        android:background="@color/colorPrimary"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -61,16 +70,12 @@
         android:clickable="true"
         android:elevation="5dp"
         android:onClick="submit"
-        android:layout_below="@+id/password_editTxt"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="41dp"
-        android:layout_alignRight="@+id/password_editTxt"
-        android:layout_alignEnd="@+id/password_editTxt"
         android:shadowColor="@color/colorPrimary"
         android:textColor="@color/regular_white"
         android:background="@color/colorPrimary"
-        />
+        android:layout_below="@+id/password_editTxt"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/password_editTxt" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -88,12 +93,12 @@
         android:textColor="@color/colorPrimaryDark"/>
 
     <ImageView
-        android:layout_width="200dp "
-        android:layout_height="200dp"
+        android:layout_width="500dp "
+        android:layout_height="500dp"
         android:id="@+id/imageView"
         android:layout_above="@+id/user_editTxt"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/dog"
+        android:src="@drawable/logo2"
         />
 
 
