--- a/app/src/main/res/layout/activity_treatments.xml
+++ b/app/src/main/res/layout/activity_treatments.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.tombushmits.dogapp.Treatments"
-    android:background="@drawable/dog_background"
+    android:background="@drawable/bones"
     >
 
     <ListView
@@ -43,7 +43,6 @@
         android:textAlignment="center"
         android:textColor="@color/regular_white"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:gravity="top"
         android:background="@color/colorPrimary"/>
 </RelativeLayout>
