--- a/app/src/main/res/layout/activity_user_screen.xml
+++ b/app/src/main/res/layout/activity_user_screen.xml
@@ -6,13 +6,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.tombushmits.dogapp.UserScreen"
-    android:background="@drawable/dog_background"
+    android:background="@drawable/bones"
     >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/regular_white"
+        android:elevation="20dp"
         android:text="Large Text"
         android:textSize="50dp"
         android:id="@+id/Dog_name"
@@ -28,26 +30,6 @@
         android:layout_alignParentStart="true"
         android:elevation="3dp" />
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Treatments"
-        android:id="@+id/goToTreatments"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="57dp"
-        />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Foods"
-        android:id="@+id/goToFood"
-        android:layout_alignTop="@+id/goToTreatments"
-        android:layout_alignRight="@+id/Dog_name"
-        android:layout_alignEnd="@+id/Dog_name" />
-
     <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,8 +38,56 @@
         android:checked="false"
         android:textOn="GPS ON"
         android:textOff="GPS OFF"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:clickable="true"
-        android:elevation="6dp" />
+        android:elevation="6dp"
+        android:layout_alignBottom="@+id/profile_imagebutton"
+        android:layout_centerHorizontal="true" />
+
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/treatment_imagebutton"
+        android:src="@drawable/main_treatment_icon"
+        android:scaleType="fitCenter"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/food_imagebutton"
+        android:src="@drawable/main_food_icon"
+        android:scaleType="fitCenter"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/toggleButton" />
+
+    <ImageButton
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/walk_imagebutton"
+        android:src="@drawable/main_walk_icon"
+        android:scaleType="fitCenter"
+        android:layout_alignTop="@+id/food_imagebutton"
+        android:layout_alignEnd="@+id/dogPic" />
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/profile_imagebutton"
+        android:scaleType="fitCenter"
+
+        android:src="@drawable/main_profile_icon"
+        android:alpha="10"
+        android:layout_alignTop="@+id/logout_button"
+        android:layout_alignParentStart="true" />
+
+    <ImageButton
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:id="@+id/logout_button"
+        android:scaleType="fitCenter"
+
+        android:src="@drawable/main_exit_icon"
+        android:layout_above="@+id/walk_imagebutton"
+        android:layout_alignEnd="@+id/walk_imagebutton" />
 </RelativeLayout>
