--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="errorColor">#f00</color>
     <color name="regular_white">#FFFFFF</color>
+    <color name="textBoxEditBackground">#313B74</color>
 
 </resources>
