--- a/app/src/main/res/layout/activity_create_new_user.xml
+++ b/app/src/main/res/layout/activity_create_new_user.xml
@@ -1,109 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.tombushmits.dogapp.CreateNewUser"
-    android:background="@drawable/bones">
-
-
-
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/bones"
+        tools:context="com.example.tombushmits.dogapp.CreateNewUser">
 
 
-        <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Submit"
-                android:id="@+id/Submit"
-                android:clickable="true"
-            android:layout_alignParentBottom="true"
-            android:layout_alignLeft="@+id/age"
-            android:layout_alignStart="@+id/age"
-            android:background="@color/colorPrimaryDark"
+        <EditText
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/dogsName"
+            android:layout_marginTop="47dp"
+            android:hint="My name"
+            android:textColorHint="@color/regular_white"
+            android:alpha="10"
             android:textColor="@color/regular_white"
-            android:layout_alignRight="@+id/image_selection"
-            android:layout_alignEnd="@+id/image_selection" />
-
-    <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/dogsName"
-                android:hint="My name?"
-                android:layout_above="@+id/Breed"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:textColorHighlight="@color/abc_primary_text_material_dark"
-                android:textSize="@dimen/abc_text_size_headline_material" />
+            android:background="@color/colorPrimary"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
 
         <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/Breed"
-                android:hint="Breed"
-                android:textSize="@dimen/abc_text_size_headline_material"
-                android:layout_above="@+id/age"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/Breed"
+            android:layout_below="@+id/dogsName"
+            android:layout_centerHorizontal="true"
+            android:hint="Breed"
+            android:textColorHint="@color/regular_white"
+            android:alpha="10"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/regular_white"
+            android:background="@color/colorPrimary"/>
 
         <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/age"
-                android:hint="Age"
-                android:textSize="@dimen/abc_text_size_headline_material"
-            android:layout_toLeftOf="@+id/user"
-                android:layout_toStartOf="@+id/user"
-            android:layout_centerVertical="true" />
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/age"
+            android:layout_below="@+id/Breed"
+            android:layout_centerHorizontal="true"
+            android:hint="My age"
+            android:textColorHint="@color/regular_white"
+            android:alpha="10"
+            android:layout_marginTop="10dp"
+            android:textColor="@color/regular_white"
+            android:background="@color/colorPrimary"
+            android:shadowColor="@color/accent_material_light" />
 
-
-    <EditText
+        <Spinner
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+            android:id="@+id/spinner"
+            android:layout_marginTop="75dp"
+            android:background="@color/colorPrimary"
+            android:layout_below="@+id/age"
+            android:textAlignment="center"
+
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Select my favorite food"
+            android:id="@+id/textView"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@+id/Submit"
+            android:textColor="@color/colorPrimary"/>
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:inputType="textPersonName"
             android:ems="10"
             android:id="@+id/user"
-            android:hint="select user name"
-            android:gravity="center_vertical"
-            android:layout_above="@+id/password"
-            android:layout_alignLeft="@+id/password"
-            android:layout_alignStart="@+id/password" />
+            android:layout_marginTop="67dp"
+            android:hint="Select username"
+            android:textColorHint="@color/regular_white"
+            android:alpha="10"
+            android:textColor="@color/regular_white"
+            android:background="@color/colorPrimary"
+            android:layout_below="@+id/spinner"
+            android:layout_centerHorizontal="true" />
 
         <EditText
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/password"
-            android:editable="true"
+            android:layout_below="@+id/user"
+            android:layout_alignStart="@+id/user"
             android:hint="Select password"
-            android:gravity="center_vertical"
-            android:layout_above="@+id/Submit"
-            android:layout_centerHorizontal="true" />
+            android:textColorHint="@color/regular_white"
+            android:alpha="10"
+            android:textColor="@color/regular_white"
+            android:background="@color/colorPrimary"
+            android:password="true" />
 
-    <ImageButton
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/image_selection"
-        android:layout_alignBottom="@+id/Breed"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/dog_image"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"
-        android:padding="0dp"
-        />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/Submit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/submit_icon"
 
-    <Spinner
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/spinner"
-        android:layout_below="@+id/age"
-        android:layout_alignLeft="@+id/age"
-        android:layout_alignStart="@+id/age" />
+            android:scaleType="fitCenter"
+            android:layout_marginEnd="29dp"
+            android:layout_alignBottom="@+id/image_selection"
+            android:layout_alignParentEnd="true">
+        </android.support.design.widget.FloatingActionButton>
+
+        <ImageButton
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:id="@+id/image_selection"
+            android:focusable="true"
+            android:elevation="20dp"
+            android:src="@drawable/no_picture"
+            android:scaleType="fitCenter"
+            android:padding="1dp"
+            android:layout_below="@+id/password"
+            android:layout_toStartOf="@+id/password" />
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</ScrollView>
