--- a/app/src/main/res/layout/activity_treatments.xml
+++ b/app/src/main/res/layout/activity_treatments.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.example.tombushmits.dogapp.Treatments"
-    android:background="@drawable/bones"
-    >
+    android:background="@drawable/bones">
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/treatmentListView"
-        android:divider="@color/colorPrimary"
-        android:dividerHeight="2.0sp"
-        android:layout_below="@+id/title"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10.0sp"
         android:paddingTop="20dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -34,15 +35,13 @@
         android:scaleType="fitCenter" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="My Treatments"
-        android:id="@+id/title"
-        android:textSize="40dp"
-        android:textAlignment="center"
-        android:textColor="@color/regular_white"
-        android:layout_alignParentTop="true"
-        android:gravity="top"
-        android:background="@color/colorPrimary"/>
+        android:text="My treatment record :"
+        android:id="@+id/textView2"
+        android:layout_above="@+id/treatmentListView"
+        android:layout_alignParentStart="true" />
+
+
 </RelativeLayout>
